removes muti_run macro and adds console script

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,3 +40,7 @@ exclude =
 
 [options.package_data]
 * = README.md
+
+[options.entry_points]
+console_scripts =
+    sandy = python3 -c 'from sandy.sampling import run, parse; run(parse())'
