removes string input option to run for comand line tool

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,4 +43,4 @@ exclude =
 
 [options.entry_points]
 console_scripts =
-    sandy = python3 -c 'from sandy.sampling import run, parse; run(parse())'
+    sandy=sandy.sampling:run
